Use JDK 21 for test compilation and modernize test code (#20)
Set maven.compiler.testRelease=21 to allow JDK 21 features in tests
while keeping JDK 8 target for main code. Migrate all test files to use
text blocks, modern collection factories (List.of, Set.of, Map.of),
and diamond operator. Refactor similar POM change analyzer tests into
parameterized tests to reduce duplication (SonarCloud java:S5976).

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>